chore: fix search location